[project]
name = "webhook-pf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jwt>=1.4.0",
    "load-dotenv>=0.1.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.4",
]
